tests/invalid/list_insert_wrong_value_type/main.py
def run_case() -> None:
    xs: list[int] = [1, 2, 3]
    xs.insert(0, "bad")


if __name__ == "__main__":
    run_case()
